<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:layout_margin="@dimen/standart_margin"
        android:padding="@dimen/standart_padding"

        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/authLoginEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:hint="@string/email"
            android:minWidth="200dp"
            android:maxWidth="400dp"
            android:inputType="textEmailAddress"

            android:layout_margin="@dimen/standart_margin"/>
        <EditText
            android:id="@+id/authPassEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:minWidth="200dp"
            android:maxWidth="400dp"
            android:inputType="textPassword"

            android:layout_marginTop="@dimen/standart_margin"
            android:layout_marginBottom="0dp"/>

        <CheckBox
            android:id="@+id/authShowPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/show_pass"

            android:layout_marginBottom="@dimen/standart_margin"
            android:layout_marginTop="0dp"/>

        <Button
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:text="@string/enter"
            android:padding="@dimen/min_padding"

            android:layout_margin="@dimen/standart_margin"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>