<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/bottomSheet"

    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/shift_floor"/>

            <RelativeLayout
                android:id="@+id/shiftButton"
                android:layout_width="122dp"
                android:layout_height="122dp"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/shiftButtonColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/need_to_correct_shift_button" />

                <TextView
                    android:id="@+id/shiftButtonTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"

                    tools:text="Начать смену"/>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/polygonCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Blue"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/standart_margin"

                android:text="@string/polygonControl"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:id="@+id/polygonMissed"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/corner_button"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/standart_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/DarkBlue"
                        android:textSize="20sp"
                        android:text="@string/No"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/polygonCorrect"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/corner_button"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/standart_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="@color/DarkBlue"
                        android:textSize="20sp"
                        android:text="@string/Yes"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sosSlider"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/Blue"
                android:padding="@dimen/standart_margin"
                android:splitTrack="false"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>